--- a/src/components/ChampList.css
+++ b/src/components/ChampList.css
@@ -1,68 +1,69 @@
 .champlist {
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    height: calc(100% - 70px);
-    padding: 10px;
-    box-sizing: border-box;
-    justify-content: center;
-    align-content: flex-start;
-    overflow: scroll;
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: calc(100% - 70px);
+  padding: 10px;
+  box-sizing: border-box;
+  justify-content: center;
+  align-content: flex-start;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .champlist-container {
-    margin: 0 20px;
-    width: 100%;
-    height: 100%;
+  margin: 0 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .champlist-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
 }
 
 .champs {
-    margin: 0;
-    font-size: 20px;
-    font-weight: 500;
-    color: rgb(218, 218, 218);
+  margin: 0;
+  font-size: 20px;
+  font-weight: 500;
+  color: rgb(218, 218, 218);
 }
 
 .champlist-header button {
-    padding: 5px;
-    background-color: rgb(36, 36, 36);
-    color: rgb(202, 202, 202);
-    border-radius: 0px;
-    border: 2px solid rgb(202, 202, 202);
-    font-weight: 500;
-    width: 139px;
+  padding: 5px;
+  background-color: rgb(36, 36, 36);
+  color: rgb(202, 202, 202);
+  border-radius: 0px;
+  border: 2px solid rgb(202, 202, 202);
+  font-weight: 500;
+  width: 139px;
 }
 
 .champlist-header button:hover {
-    color: rgb(36, 36, 36);
-    background-color: rgb(202, 202, 202);
+  color: rgb(36, 36, 36);
+  background-color: rgb(202, 202, 202);
 }
 
 .champlist-header button:focus {
-    outline: none;
+  outline: none;
 }
 
 .champlist-header input {
-    background-color: rgb(88, 88, 88);
-    border: 2px solid rgb(158, 158, 158);
-    padding: 5px;
-    color: white;
+  background-color: rgb(88, 88, 88);
+  border: 2px solid rgb(158, 158, 158);
+  padding: 5px;
+  color: white;
 }
 
 .champlist-header input:focus {
-    border: 2px solid white;
-    outline: none;
+  border: 2px solid white;
+  outline: none;
 }
 
 .champlist-header input::placeholder {
-    color: rgb(167, 167, 167);
+  color: rgb(167, 167, 167);
 }
